--- a/client/vite-project/src/components/edit-quote/EditQuote.module.scss
+++ b/client/vite-project/src/components/edit-quote/EditQuote.module.scss
@@ -115,10 +115,11 @@
 
     &__submit__button {
         all: unset;
-        font-size: .8rem;
+        width: fit-content;
+        font-size: .7rem;
         padding: .5rem 1.5rem;
-        margin-top: .5rem;
-        background-color: rgb(48, 48, 48);
+        margin-top: .8rem;
+        background-color: rgb(16, 16, 16);
         color: rgb(231, 231, 231);
         border-radius: .5rem;
         transition: background-color .3s;
