--- a/client/vite-project/src/components/quotes/Quotes.module.scss
+++ b/client/vite-project/src/components/quotes/Quotes.module.scss
@@ -1,3 +1,16 @@
+// animations
+@keyframes noQuotesFoundAnimation {
+    from {
+        transform: translateX(-300px);
+    }
+
+    to {
+        transform: translateX(0);
+    }
+}
+
+///
+
 .quotes__container {
     display: grid;
     grid-template-columns: 1fr;
@@ -50,6 +63,23 @@
     justify-content: center;
     padding-left: 0;
     gap: 1rem;
+}
+
+.quotes__noQuotesFound__message {
+    grid-row: 3 / 4;
+    align-self: start;
+    font-size: 2.2rem;
+    font-weight: 200;
+    margin: 0;
+    animation-name: noQuotesFoundAnimation;
+    animation-duration: 2s;
+    animation-timing-function: ease-out;
+
+    &::after {
+        content: '.';
+        color: red;
+        font-weight: bold;
+    }
 }
 
 .load__more__button__wrapper {
