--- a/client/vite-project/src/components/load-more-quotes/LoadMoreQuotes.module.scss
+++ b/client/vite-project/src/components/load-more-quotes/LoadMoreQuotes.module.scss
@@ -2,14 +2,17 @@
     margin: 0;
     padding: .5rem 3rem;
     border: none;
-    border-radius: .5rem;
-    background-color: rgb(53, 51, 51);
+    border-radius: .1rem;
+    background-color: rgb(23, 23, 23);
     color: white;
     font-weight: bold;
+    font-size: .7rem;
     text-transform: capitalize;
     cursor: pointer;
+    transition: background-color .2s;
 
     &:hover {
-        background-color: rgb(14, 13, 13);
+        background-color: rgb(228, 228, 228);
+        color: black;
     }
 }
