--- a/client/vite-project/src/components/user-profile/UserProfile.module.scss
+++ b/client/vite-project/src/components/user-profile/UserProfile.module.scss
@@ -3,12 +3,12 @@
     max-width: 1000px;
     margin: 0 auto;
     grid-template-columns: 1fr 1fr;
-    grid-template-rows: 15rem 10rem 1fr;
+    grid-template-rows: 15rem 10rem 10rem 1fr;
 }
 
 .profile__page__welcome__message__container {
     grid-row: 1 / 2;
-    grid-column: 1 / 2;
+    grid-column: 1 / 3;
     align-self: start;
     justify-self: start;
     // box-shadow: 1rem 1rem 1rem rgb(226, 226, 226);
@@ -17,19 +17,14 @@
 }
 
 .profile__page__welcome__message {
-    font-size: 2rem;
-    font-weight: 300;
+    font-size: .8rem;
+    font-weight: 400;
     margin: 0;
     display: inline-block;
 
-    &::first-letter {
-        font-weight: bold;
-        font-size: 2.5rem;
-    }
-
     &__email {
-        font-size: 2rem;
-        font-weight: bold;
+        font-size: .8rem;
+        font-weight: 400;
         padding-left: .4rem;
 
         &::after {
@@ -40,30 +35,35 @@
     }
 
     &__info {
-        font-size: .9rem;
+        font-size: 1.5rem;
         text-align: center;
         font-weight: 300;
         align-self: center;
+        margin-top: 3rem;
     }
 }
 
 .profile__page__update__password__container {
-    grid-row: 1 / 2;
+    grid-row: 2 / 3;
     grid-column: 2 / 3;
+    justify-self: center;
+    align-self: start;
     display: flex;
     flex-direction: column;
     align-items: end;
     justify-content: end;
+
 }
 
 
 .profile__page__heading {
-    grid-row: 2 / 3;
+    grid-row: 3 / 4;
     grid-column: 1 / 3;
     font-size: 4rem;
-    font-weight: 400;
+    font-weight: 300;
     text-align: center;
     line-height: 1.05;
+    margin: 0;
 
     &::after {
         content: '.';
@@ -73,12 +73,13 @@
 
     &::first-letter {
         font-size: 5rem;
-        font-weight: bold;
+        // font-weight: bold;
     }
 }
 
 .quotes__container {
     grid-column: 1 / 3;
+    grid-row: 4/5;
     min-height: 600px;
     overflow-y: scroll;
     display: flex;
@@ -191,8 +192,13 @@
     }
 
     .profile__page__update__password__container {
-        grid-row: 1 / 2;
+        grid-row: 2 / 3;
         grid-column: 1 / 3;
         justify-self: center;
+        align-self: start;
+    }
+
+    .profile__page__heading {
+        margin-top: 2rem;
     }
 }
