--- a/client/vite-project/src/components/user-profile/update-password/UpdatePassword.module.scss
+++ b/client/vite-project/src/components/user-profile/update-password/UpdatePassword.module.scss
@@ -3,9 +3,9 @@
     cursor: pointer;
     background-color: black;
     color: white;
-    border-radius: .5rem;
-    padding: .4rem 1.5rem;
-    font-size: .9rem;
+    border-radius: .1rem;
+    padding: .7rem 1.5rem;
+    font-size: .7rem;
     transition: background-color .3s;
     margin-bottom: 1rem;
 
@@ -27,10 +27,11 @@
     }
 
     &__input {
+        min-width: 15rem;
+        padding: .6rem 1rem;
         outline: none;
         border: none;
-        border-radius: .5rem;
-        padding: .6rem 1rem;
+        border-radius: .1rem;
         background-color: rgb(236, 236, 236);
 
         &::placeholder {
@@ -45,9 +46,9 @@
         width: fit-content;
         background-color: black;
         color: white;
-        padding: .3rem 1.3rem;
-        border-radius: .5rem;
-        margin-top: .5rem;
+        padding: .4rem 1.2rem;
+        border-radius: .1rem;
+        margin-top: .8rem;
         transition: background-color .3s;
 
         &:hover {
