--- a/client/vite-project/src/components/user-profile/UserProfile.module.scss
+++ b/client/vite-project/src/components/user-profile/UserProfile.module.scss
@@ -80,7 +80,7 @@
 .quotes__container {
     grid-column: 1 / 3;
     grid-row: 4/5;
-    min-height: 600px;
+    height: 600px;
     overflow-y: scroll;
     display: flex;
     flex-wrap: wrap;
