--- a/client/vite-project/src/components/login/Login.module.scss
+++ b/client/vite-project/src/components/login/Login.module.scss
@@ -45,40 +45,49 @@
     align-self: start;
 
     &__label {
-        font-size: .8rem;
+        font-size: .6rem;
         color: rgb(34, 34, 34);
         text-align: left;
-        padding: .3rem 0;
+        padding-top: .7rem;
     }
 
     &__input {
         padding: .7rem;
-        border-radius: .7rem;
-        outline: none;
-        border: none;
+        border-radius: .1rem;
+        border: 1px solid black;
         background-color: rgb(248, 248, 248);
+        transition: border .2s;
     }
 
     &__input:user-invalid {
-        outline: 2px solid var(--error);
+        outline: 1px solid var(--error);
+        border: 1px solid white;
     }
 
     &__input:user-valid {
-        outline: 2px solid var(--success);
+        outline: 1px solid var(--success);
+        border: 1px solid white;
     }
 
     &__input:focus {
-        outline: 2px solid var(--warning);
+        outline: none;
+        border: 1px solid white;
+        background-color: rgb(226, 226, 226);
+        transition: border .2s;
+    }
+
+    &__input::placeholder {
+        font-size: .7rem;
     }
 
     &__submit__button {
         all: unset;
         font-size: .8rem;
-        padding: .5rem 1.5rem;
+        padding: .4rem 1.2rem;
         margin-top: .5rem;
         background-color: rgb(48, 48, 48);
         color: rgb(231, 231, 231);
-        border-radius: .5rem;
+        border-radius: .1rem;
         transition: background-color .3s;
         cursor: pointer;
 
@@ -97,8 +106,8 @@
 
 .reset__password__link {
     all: unset;
-    font-size: .8rem;
-    font-weight: 400;
+    font-size: .7rem;
+    font-weight: 500;
     color: rgb(24, 24, 24);
     cursor: pointer;
 
